--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,6 @@ set(CMAKE_CXX_STANDARD 20)
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ./src/)
 project(.)
 add_executable(
-	dpgen
+	hlsyn
 	src/main.cpp
 )
